# PhotoNet

./: .env  .gitignore  README.md  main.py  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 39fea8647180_added_path_column.py  f91a8beb8472_init.py
src/: schemas.py
src/conf/: config.py  type_error.py
src/database/: db.py  models.py
src/repository/: images.py  photos.py  search.py  transformed_images.py  users.py
src/routes/: images.py  photos.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
