[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["iPlugin <real.andreychuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
python-multipart = "^0.0.6"
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]