[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["iPlugin <real.andreychuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.100.0"
uvicorn = {extras = ["standart"], version = "^0.23.1"}
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
alembic = "^1.11.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]