[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["iPlugin <real.andreychuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"
pydantic-settings = "^2.0.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]